# delegates

./: .gitignore  CMakeLists.txt
include/: Delegate.h
tests/: CMakeLists.txt
